2005-09-29  Derek Price  <derek@ximbiot.com>

	* main.c (main): Check for error return from time().

2005-09-29  Paul Eggert  <eggert@CS.UCLA.EDU>
	    Derek Price  <derek@ximbiot.com>

	* client.c (handle_m, handle_e): Remove incomplete workaround for
	O_NONBLOCK problem; no longer needed because of the fix below.
	* cvs.h (piped_child): New bool argument saying whether O_NONBLOCK
	fix is needed.  All uses changed.
	* rsh-client.c (start_rsh_server): We need the O_NONBLOCK fix,
	so pass 'true' to piped_child to enable the workaround.
	* run.c (work_around_openssh_glitch): New function.
	(piped_child): Use it if the fix is requested.  Avoid call call to
	vfork with undefined behavior.

2005-09-29  Mark D. Baushke  <mdb@gnu.org>

	* main.c (main): Rename N as COMMITID_RAW_SIZE.
	Use base62 encoding for non-urandom case.

2005-09-29  Derek Price  <derek@ximbiot.com>

	* buffer.c (fd_buffer_input), client.c (handle_m, handle_e): Use new
	fd_select in place of select.

	* subr.c: Remove select includes - the sleep functions are now in
	lib.

2005-09-28  Mark D. Baushke  <mdb@gnu.org>

	* main.c (N, RANDOM_BYTES): New constants for base62 conversion.
	(divide_by): Used in base62 conversion.
	(convert): Ditto.
	(main): Set global_session_id using more random data and the
	current time in base62 if possible, otherwise fallback to the old
	method.

2005-09-25  Conrad T. Pino  <Conrad@Pino.com>

	* rcs.c: Use "#ifdef HAVE_FSYNC" just like every where else.

2005-09-25  Conrad T. Pino  <Conrad@Pino.com>

	* buffer.c client.h socket-client.h:  Remove HAVE_WINSOCK_H macro &
	change <winsock.h> to <sys/socket.h> include.

	* server.c:  Remove HAVE_WINSOCK_H and <winsock.h> include.

2005-09-25  Derek Price  <derek@ximbiot.com>

	* rcs.c (rcs_internal_unlockfile): Fsync files before renaming them.
	Patch from Rahul Bhargava <rahul@wandisco.com>.

	* cvs.h, filesubr.c, main.c, server.c:
	s/push_cvs_tmp_dir/push_cvs_temp_dir/.
