@@ -1,3 +1,8 @@
+2005-09-29  Mark D. Baushke  <mdb@gnu.org>
+
+	* main.c (main): Not all hosts support O_NOCTTY for open.
+	Try to use more random data when time() returns -1.
+	
 2005-09-29  Derek Price  <derek@ximbiot.com>
 
 	* main.c (main): Check for error return from time().
